<resources>
    <string name="app_name">Android Tutorial</string>
    <string name="app_name_webView">EDUCAVILLAGE</string>
    <string name="nav_header_text">www.educavillage.com</string>
    <string name="contentDescription_image_view">TODO</string>

    <string name="java_overview">Overview</string>
    <string name="java_environment_setup">Environment Setup</string>
    <string name="history_of_java">History of Java</string>
    <string name="java_what_is_java">What is Java</string>
    <string name="features_of_java">Features of java</string>
    <string name="java_difference_between_JDK_JRE_JVM">Difference between JDK,JRE and JVM</string>
    <string name="java_JVM">Java JVM (Java Virtual Machine)</string>
    <string name="java_basic_syntax">Basic Syntax</string>
    <string name="java_objects_an_classes">Objects and Classes</string>
    <string name="java_basic_data_type">Basic Data Types</string>
    <string name="java_variable_types">Variable Types</string>
    <string name="java_modifier_types">modifier Types</string>
    <string name="java_basic_operators">Basic Operators</string>
    <string name="java_loops">Loops</string>
    <string name="java_decision_making">Decision Making</string>
    <string name="numbers_class_in_java">Numbers Class</string>
    <string name="character_class_in_java">Character Class</string>
    <string name="strings_class_in_java">Strings Class</string>
    <string name="arrays_in_java">Arrays</string>
    <string name="date_and_time_in_java">Date and Time</string>
    <string name="regular_expressions_in_java">Regular Expressions</string>
    <string name="java_methods">Methods</string>
    <string name="streams_files_and_io_in_java">Streams Files and I/O</string>
    <string name="exceptions_handling_in_java">Exceptions Handling</string>
    <string name="inheritance_in_java">Inheritance</string>
    <string name="overriding_in_java">Overriding</string>
    <string name="polymorphism_in_java">Polymorphism</string>
    <string name="abstraction_in_java">Abstraction</string>
    <string name="encapsulation_in_java">Encapsulation</string>
    <string name="interfaces_in_java">Interfaces</string>
    <string name="packages_in_java">Packages</string>
    <string name="data_structures_in_java">Data Structures</string>
    <string name="collections_framework_in_java">Collections Framework</string>
    <string name="generics_in_java">Generics</string>
    <string name="serialization_in_java">Serialization</string>
    <string name="networking_in_java">Networking</string>
    <string name="sending_mail_in_java">Sending Email</string>
    <string name="multithreading_in_java">Multithreading</string>
    <string name="applet_basics_in_java">Applet Basics</string>
    <string name="documentation_comments">Documentation Comments</string>

    <string name="android_overview">Overview</string>
    <string name="android_environment_setup">Environment Setup</string>
    <string name="android_architecture">Architecture</string>
    <string name="android_application_components">Application Components</string>
    <string name="android_hello_world_example">Hello World Example</string>
    <string name="android_resources_organizing">Resources Organizing</string>
    <string name="android_activities">Activities</string>
    <string name="android_services">Services</string>
    <string name="android_broadcast_receivers">Broadcast Receivers</string>
    <string name="android_content_providers">Content Providers</string>
    <string name="android_fragments">Fragments</string>
    <string name="android_intents_and_filters">Intents and Filters</string>
    <string name="android_styles_and_themes">Styles and Themes</string>
    <string name="android_custom_components">Customs Components</string>
    <string name="android_ui_layouts">UI Layouts</string>
    <string name="android_ui_controls">UI Controls</string>
    <string name="android_event_handling">Event Handling</string>
    <string name="android_drag_and_drop">Drag and Drop</string>
    <string name="android_notifications">Notifications</string>
    <string name="android_location_based_services">Location Based Services</string>
    <string name="android_sending_email">Sending Email</string>
    <string name="android_sending_sms">Sending SMS</string>
    <string name="android_phone_calls">Phone calls</string>
    <string name="android_publishing_application">Publishing Application</string>

    <string name="sqlite_home">Home</string>
    <string name="sqlite_overview">Overview</string>
    <string name="sqlite_installation">Installation</string>
    <string name="sqlite_commands">Commands</string>
    <string name="sqlite_syntax">Syntax</string>
    <string name="sqlite_data_type">Data Type</string>
    <string name="sqlite_create_database">CREATE Database</string>
    <string name="sqlite_attach_database">ATTACH Database</string>
    <string name="sqlite_detach_database">DETACH Database</string>
    <string name="sqlite_create_table">CREATE Table</string>
    <string name="sqlite_drop_table">DROP Table</string>
    <string name="sqlite_isert_query">INSERT Query</string>
    <string name="sqlite_select_query">SElECT Query</string>
    <string name="sqlite_operators">Operators</string>
    <string name="sqlite_expressions">Expressions</string>
    <string name="sqlite_where_clause">WHERE Clause</string>
    <string name="sqlite_AND_and_OR_operators">AND and OR Operators</string>
    <string name="sqlite_update_Query">UPDATE Query</string>
    <string name="sqlite_delete_query">DELETE Query</string>
    <string name="sqlite_like_clause">LIKE Clause</string>
    <string name="sqlite_glob_clause">GLOB Clause</string>
    <string name="sqlite_limit_clause">LIMIT Clause</string>
    <string name="sqlite_ORDER_BY_Clause">ORDER BY Clause</string>
    <string name="sqlite_group_by_clause">Group By Clause</string>
    <string name="sqlite_having_by_clause">HAVING By Clause</string>
    <string name="sqlite_distinct_keyword">DISTINCT Keyword</string>

</resources>
