<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_home"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_overview"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_installation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_installation"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_commands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_commands"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_syntax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_syntax"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_data_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_data_type"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_create_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_create_database"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_attach_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_attach_database"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_detach_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_detach_database"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_create_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_create_table"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_drop_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_drop_table"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_isert_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_isert_query"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_select_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_select_query"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_operators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_operators"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_expressions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_expressions"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_where_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_where_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_AND_and_OR_operators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_AND_and_OR_operators"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_update_Query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_update_Query"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_delete_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_delete_query"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_like_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_like_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_glob_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_glob_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_limit_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_limit_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_ORDER_BY_Clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_ORDER_BY_Clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_group_by_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_group_by_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_having_by_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_having_by_clause"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txt_sqlite_distinct_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlite_distinct_keyword"
                android:textSize="19sp"
                android:textColor="@color/textblack"
                android:padding="15dp"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

